// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MutedBox render() handles default 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <span
      className="icon icon-soundoff"
      style={
        Object {
          "color": "#e03e2f",
        }
      }
    />
    <span>
      This issue has been ignored
       — 
      You will not be notified of any changes and it will not show up by default in feeds.
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`MutedBox render() handles ignoreCount 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <span
      className="icon icon-soundoff"
      style={
        Object {
          "color": "#e03e2f",
        }
      }
    />
    <span>
      This issue has been ignored until it affects 
      <strong
        key="1"
      >
        100
      </strong>
       more user(s)
       — 
      You will not be notified of any changes and it will not show up by default in feeds.
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`MutedBox render() handles ignoreCount with ignoreWindow 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <span
      className="icon icon-soundoff"
      style={
        Object {
          "color": "#e03e2f",
        }
      }
    />
    <span>
      This issue has been ignored until it occurs 
      <strong
        key="1"
      >
        100
      </strong>
       time(s) in 
      <strong
        key="3"
      >
        <Duration
          seconds={60}
        />
      </strong>
       — 
      You will not be notified of any changes and it will not show up by default in feeds.
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`MutedBox render() handles ignoreUntil 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <span
      className="icon icon-soundoff"
      style={
        Object {
          "color": "#e03e2f",
        }
      }
    />
    <span>
      This issue has been ignored until 
      <strong
        key="1"
      >
        <DateTime
          date="2017-06-21T19:45:10Z"
          seconds={true}
        />
      </strong>
       — 
      You will not be notified of any changes and it will not show up by default in feeds.
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`MutedBox render() handles ignoreUserCount 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <span
      className="icon icon-soundoff"
      style={
        Object {
          "color": "#e03e2f",
        }
      }
    />
    <span>
      This issue has been ignored until it affects 
      <strong
        key="1"
      >
        100
      </strong>
       more user(s)
       — 
      You will not be notified of any changes and it will not show up by default in feeds.
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`MutedBox render() handles ignoreUserCount with ignoreUserWindow 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <span
      className="icon icon-soundoff"
      style={
        Object {
          "color": "#e03e2f",
        }
      }
    />
    <span>
      This issue has been ignored until it affects 
      <strong
        key="1"
      >
        100
      </strong>
       user(s) in 
      <strong
        key="3"
      >
        <Duration
          seconds={60}
        />
      </strong>
       — 
      You will not be notified of any changes and it will not show up by default in feeds.
    </span>
  </BannerSummary>
</BannerContainer>
`;
